--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,23 +7,25 @@
     <tr>
       <th>Name</th>
       <th>Email</th>
+      <th>Password</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @users.each do |user| %>
+    <% @admin_users.each do |user| %>
       <tr>
         <td><%= user.name %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', [:admin, user] %></td>
+        <td><%= user.password %></td>
+        <td><%= link_to 'Show', admin_user %></td>
         <td><%= link_to 'Edit', edit_admin_user_path(user) %></td>
-        <td><%= link_to 'Destroy', [:admin, user], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', admin_user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
-
   </tbody>
 </table>
 
 <br>
+
 <%= link_to 'New User', new_admin_user_path %>
